# SymSpellPlusPlus

./: CMakeLists.txt  Dockerfile  install.sh  symspell6.h
include/: editdistance.h  suggestionstage.h  suggestitem.h  symspell.h  utils.h  wordsegmentationitem.h
src/: editdistance.cpp  suggestionstage.cpp  suggestitem.cpp  symspell.cpp  utils.cpp  wordsegmentationitem.cpp
test/: CMakeLists.txt  main.cpp
